--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl: /plain_paper
 
-title: "Harsh Patel"
-author: "Harsh Patel"
+title: "Biswajit Behera"
+author: "Biswaajit Behera"
 bio-oneliner: "Computer Programmer"
-mobile: "1234567890"
-email: "harshgp@gmail.com"
+mobile: "7283820980"
+email: "biswajitbehera976@gmail.com"
